welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var bag = 1
avance()	
if(estSurBiscuit()) {
		bag = bag + 1
}	
if(croisement()=="true") {
		gauche()
		avance()
}
do {
	if(bag>="3") {
		droite()
	}
	if(bag<="2") {
		gauche()
	}
} while (bag=="5")
